# midiRhythm

./: .gitignore  midiRhythm.cabal  readme.md  stack.yaml
app/: Main.hs
rhythm_hmm/: Cargo.toml
rhythm_hmm/src/: ioi.rs  ioi_viterbi.rs  lib.rs  main.rs  viterbi.rs
samples/: sammy.mid
src/: Lib.hs
src/MidiRhythm/: Histogram.hs  Midi.hs  NotePress.hs  Rhythm.hs  Search.hs
test/: Spec.hs
visual/: index.html  sample.js  visual.js
